[package]
name = "libaeron-sys"
version = "1.0.0+1.30.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
repository = "https://github.com/bspeice/libaeron-sys"
documentation = "https://docs.rs/libaeron-sys"
description = "Rust bindings for the Aeron Client"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.54"
cmake = "0.1"
dunce = "1.0"

[features]
static = []

[badges]
travis-ci = { repository = "bspeice/libaeron-sys" }
