[package]
name = "libaeron_archive_c_client-sys"
version = "1.47.5"
authors = ["Bradlee Speice <bradlee@speice.io>"]
repository = "https://github.com/bspeice/libaeron-sys"
documentation = "https://docs.rs/libaeron_archive_c_client-sys"
description = "Rust bindings for the Aeron Archive Client"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
libaeron-sys = { version = "=1.47.5", path = "../libaeron-sys" }

[build-dependencies]
bindgen = "0.68"
cmake = "0.1"
dunce = "1.0"
cc = "1.2"

[features]
static = ["libaeron-sys/static"]
