[package]
name = "libaeron_driver-sys"
version = "1.0.0+1.28.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.54"
cmake = "0.1"
dunce = "1.0"

[features]
static = []