[package]
name = "libaeron_driver-sys"
version = "1.47.1"
authors = ["Bradlee Speice <bradlee@speice.io>"]
repository = "https://github.com/bspeice/libaeron-sys"
documentation = "https://docs.rs/libaeron_driver-sys"
description = "Rust bindings for the Aeron Media Driver"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.68"
cmake = "0.1"
dunce = "1.0"

[features]
static = []
